<resources>

    <string name="app_name">piepsendroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_piepsen_droid">piepsendroid</string>
    <string name="about">piepsendroid by android@i3games.com</string>
    <string name="version">version 0.2.1</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    
    <string name="prefs_audio">Audio</string>
    <string name="prefs_audio_frequency">Initial Frequency</string>
    <string name="prefs_audio_frequency_summary">The initial frequency in Hertz.</string>
    <string name="prefs_audio_frequency_default">440</string>
    <string name="prefs_ui">UI</string>
    <string name="prefs_ui_diagnostic">Diagnostic</string>
    <string name="prefs_ui_diagnostic_summary">Show the diagnotic interface?</string>
    <string name="dummy">---</string>
    <string name="shutdown">FATAL: Cannot connect to the audio layer. Shutting down.</string>
    <string name="trigger">Pieps!</string>
    <string name="frequency">Frequency</string>
    <string name="amplitude">Amplitude</string>
    <string name="attack">Attack</string>
    <string name="prefs_general">General</string>
    <string name="prefs_general_stopserviceonexit_summary">Should the audio service be stopped when piepsendroid is sent to the background?</string>
    <string name="prefs_general_stopserviceonexit">Stop Service on Exit</string>
    <string name="prefs_audio_frequency_min">Minimum Frequency</string>
    <string name="prefs_audio_frequency_min_default">280</string>
    <string name="prefs_audio_frequency_min_summary">The minimum frequency we listen to in Hertz.</string>
    <string name="prefs_audio_frequency_max_default">4000</string>
    <string name="prefs_audio_frequency_max">Maximum Frequency</string>
    <string name="prefs_audio_frequency_max_summary">The maximum frequency we listen to in Hertz.</string>
    <string name="prefs_audio_amplitude_min_default">70</string>
    <string name="prefs_audio_amplitude_min_summary">The minimum amplitude we listen to.</string>
    <string name="prefs_audio_amplitude_min">Minimum Amplitude</string>
    <string name="prefs_audio_amplitude_max_default">100</string>
    <string name="prefs_audio_amplitude_max">Maximum Amplitude</string>
    <string name="prefs_audio_amplitude_max_summary">The maximum amplitude we listen to.</string>
    <string name="prefs_automode">Automode</string>
    <string name="prefs_automode_startinautomode_summary">Should the app be listening and pieping on startup.</string>
    <string name="prefs_automode_startinautomode">Start in Auto Mode</string>
    <string name="prefs_automode_mindelay_default">3000</string>
    <string name="prefs_automode_mindelay_summary">The minimum delay before pieping in ms.</string>
    <string name="prefs_automode_mindelay">Minimum Delay</string>
    <string name="prefs_automode_maxadd_default">5000</string>
    <string name="prefs_automode_maxadd_summary">The maximum delay summand before pieping in ms.</string>
    <string name="prefs_automode_maxadd">Maximium Addition</string>
    <string name="start_automode">Start auto</string>
    <string name="stop_automode">Stop auto</string>

</resources>